--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,16 @@
           </execution>
         </executions>
       </plugin>
+             <plugin>  
+                <groupId>org.apache.maven.plugins</groupId>  
+                <artifactId>maven-surefire-plugin</artifactId>  
+                <configuration>  
+                    <suiteXmlFiles>  
+                        <suiteXmlFile>src/main/java/Demo.xml</suiteXmlFile>  
+                    </suiteXmlFiles>  
+                </configuration>  
+                <version>2.4</version>  
+            </plugin>  
     </plugins>
   </build>
 
