--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>  
                 <configuration>  
                     <suiteXmlFiles>  
-                        <suiteXmlFile>src/main/java/Demo.xml</suiteXmlFile>  
+                        <suiteXmlFile>src/main/java/projectARestAPISuite.xml</suiteXmlFile>  
                     </suiteXmlFiles>  
                 </configuration>  
                 <version>2.4</version>  
